Make sure scripts that are too long scroll

--- a/assets/stylesheets/snapblocks-discourse.css
+++ b/assets/stylesheets/snapblocks-discourse.css
@@ -1,3 +1,7 @@
 code.snapblocks-blocks:has(.snapblocks) {
     background: none;
 }
+
+.snapblocks-blocks {
+    overflow: auto;
+}
